# ComfyUI-Flux2LatentPresets

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: __init__.py  flux2_latent_presets.py
